# seshat

./: .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DECISIONS.md  PRIVACY.md  PROJECT_STATE.md  README.md  ROADMAP.md  TASKS.md  install-login-item.sh  menubar_app.py  process-recordings.py  pyproject.toml
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release-appstore.yml  release.yml  submit-appstore.yml  version-bump.yml
apple/: .gitignore  Distavo-AppStore.entitlements  Distavo.entitlements  README.md  project.yml
apple/DistavoCore/: Package.swift
apple/DistavoEmbedded/: Package.resolved  Package.swift
apple/ScribedCore/: Package.swift
apple/configs/: AppStore.xcconfig  Direct.xcconfig  Setapp.xcconfig
apple/metadata/: listing.json
apple/scripts/: build-and-notarize.sh
docs/: distribution-checklist.md  helper-program-design.md  release-automation.md  setapp-submission.md  trademark-assessment.md
meeting_pipeline/: __init__.py  cleaning.py  cli.py  config.py  links.py  pipeline.py  settings_server.py  state.py  summarise.py  transcribe.py  validate.py
ops/helper-program/: feedback.html  n8n-and-espocrm.md
scripts/: bump-minor-version.py  setup-appstore-listing.py  submit-appstore-review.py
tests/: conftest.py  test_cleaning.py  test_cli.py  test_config.py  test_controller.py  test_links.py  test_pipeline.py  test_settings_server.py  test_smoke.py  test_state.py  test_summarise.py  test_transcribe.py  test_validate.py
(+70 files in other folders)
