[project]
name = "scribed"
version = "0.1.0"
description = "A macOS menu-bar app that turns meeting recordings into structured Markdown notes, using your own WhisperX and Ollama servers."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Joan Marc Riera Duocastella" }]
keywords = ["macos", "menu-bar", "whisperx", "ollama", "transcription", "meeting-notes"]
dependencies = [
    "rumps>=0.4.0",
    "requests>=2.31.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0"]

[project.scripts]
scribed = "meeting_pipeline.cli:main"

[project.urls]
Homepage = "https://github.com/Joanmarcriera/scribed"
Issues = "https://github.com/Joanmarcriera/scribed/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["meeting_pipeline"]

[tool.pytest.ini_options]
testpaths = ["tests"]
